--- a/pipeline6/Jenkinsfile
+++ b/pipeline6/Jenkinsfile
@@ -4,7 +4,8 @@ pipeline {
     //agent {label 'master'}
     
     environment {
-        PASS = credentials('registry-pass') 
+        PASS = credentials('registry-pass')
+        withEnv(["PATH=$PATH:~/.local/bin"])
     }
 
     stages {
